[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "eyes-ai"
version = "0.0.1"
description = "A Python library for creating neural networks and tokenizers"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "eyes-studio"}
]

dependencies = []